# ai_assistants

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  report.md  system-designer.md
.claude/commands/: commit-push-pr.md
.claude/skills/git-commit-writer/: SKILL.md
.github/workflows/: claude-security-review.yml
src/ai_assistants/: __init__.py  blog_writer_crew.py  crew.py  main.py
src/ai_assistants/chatbot/: __init__.py  app.py  main.py
src/ai_assistants/chatbot/api/: __init__.py  routes.py  schemas.py
src/ai_assistants/chatbot/core/: __init__.py  graph.py  nodes.py  prompts.py  state.py
src/ai_assistants/chatbot/rag/: __init__.py  documents.py  vectorstore.py
src/ai_assistants/chatbot/tools/: __init__.py  web_search.py
src/ai_assistants/config/: agents.yaml  tasks.yaml
src/ai_assistants/crews/: __init__.py  main.py
src/ai_assistants/crews/blog_writer/: __init__.py  crew.py
src/ai_assistants/crews/blog_writer/config/: agents.yaml  tasks.yaml
src/ai_assistants/crews/tools/: __init__.py  custom_tool.py
src/ai_assistants/embedding_utility/: __init__.py  config.py  main.py  pipeline.py
src/ai_assistants/embedding_utility/chunker/: text_chunker.py
src/ai_assistants/embedding_utility/embeddings/: generator.py
src/ai_assistants/embedding_utility/ocr/: processor.py
src/ai_assistants/embedding_utility/search/: azure_client.py  schema.py
src/ai_assistants/shared/: __init__.py  config.py  logging.py
