[project]
name = "ai_assistants"
version = "0.1.0"
description = "ai-assistants using crewAI"
authors = [{ name = "Mark Minisce", email = "miniscem@gmail.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
ai_assistants = "ai_assistants.main:run"
run_crew = "ai_assistants.main:run"
train = "ai_assistants.main:train"
replay = "ai_assistants.main:replay"
test = "ai_assistants.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
